cabal-version:       3.0
name:                cardano-ledger-test
version:             0.1.0.0
synopsis:
  Testing harness, tests and benchmarks for Shelley style cardano ledgers
-- description:
-- bug-reports:
license:             Apache-2.0
author:              IOHK Formal Methods Team
maintainer:          nicholas.clarke@iohk.io
copyright:           2020 Input Output (Hong Kong) Ltd.
-- category:
build-type:          Simple
extra-source-files:
  CHANGELOG.md
  bench/resources/0_ledgerstate.cbor
  bench/resources/0_tx.cbor

library
  -- We make use of features requiring ghc >= 8.10. In order to allow CI to
  -- still build the 'all' component, simply make this non-buildable.
  if impl(ghc < 8.10)
    buildable: False
  hs-source-dirs:      src
  exposed-modules:
    Test.Cardano.Ledger.TestableEra
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wpartial-fields
  build-depends:
    base >=4.14 && <4.15,
    shelley-spec-ledger,
    cardano-ledger-shelley-ma,
    cardano-ledger-alonzo
  default-language:    Haskell2010

benchmark bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:
    bench
  main-is:          Main.hs
  default-language:    Haskell2010
  other-modules:
    Bench.Cardano.Ledger.ApplyTx
    Bench.Cardano.Ledger.Serialisation.Generators
  build-depends:
    base >=4.9 && <4.15,
    bytestring,
    cardano-binary,
    cardano-ledger-shelley-ma-test,
    cardano-ledger-shelley-ma,
    containers,
    criterion,
    data-default-class,
    deepseq,
    QuickCheck,
    shelley-spec-ledger,
    shelley-spec-ledger-test
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
      -Wall
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wredundant-constraints
      -O2
