name:                cardano-crypto-wrapper
version:             1.3.0
synopsis:            Cryptographic primitives used in the Cardano project
description:         Cryptographic primitives used in the Cardano project
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2019 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  hs-source-dirs:      src
  exposed-modules:
                       Cardano.Crypto

                       Cardano.Crypto.Hashing
                       Cardano.Crypto.HD
                       Cardano.Crypto.Limits
                       Cardano.Crypto.Orphans
                       Cardano.Crypto.ProtocolMagic
                       Cardano.Crypto.Random
                       Cardano.Crypto.Signing
                       Cardano.Crypto.Signing.Redeem
                       Cardano.Crypto.Signing.Safe

  other-modules:
                       Cardano.Crypto.Scrypt

                       Cardano.Crypto.Signing.Tag

                       Cardano.Crypto.Signing.KeyGen
                       Cardano.Crypto.Signing.VerificationKey
                       Cardano.Crypto.Signing.SigningKey
                       Cardano.Crypto.Signing.Signature

                       Cardano.Crypto.Signing.Proxy
                       Cardano.Crypto.Signing.Proxy.Cert
                       Cardano.Crypto.Signing.Proxy.VerificationKey
                       Cardano.Crypto.Signing.Proxy.Signature

                       Cardano.Crypto.Signing.Redeem.KeyGen
                       Cardano.Crypto.Signing.Redeem.VerificationKey
                       Cardano.Crypto.Signing.Redeem.SigningKey
                       Cardano.Crypto.Signing.Redeem.Signature

                       Cardano.Crypto.Signing.Safe.EncryptedSigningKey
                       Cardano.Crypto.Signing.Safe.KeyGen
                       Cardano.Crypto.Signing.Safe.PassPhrase
                       Cardano.Crypto.Signing.Safe.SafeSigner

  build-depends:       base
                     , aeson
                     , base64-bytestring
                     , base64-bytestring-type
                     , bytestring
                     , canonical-json
                     , cardano-binary
                     , cardano-crypto
                     , cardano-prelude
                     , cryptonite
                     , cryptonite-openssl
                     , data-default
                     , formatting
                     , memory
                     , mtl
                     , scrypt
                     , text

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  ghc-options:         -Weverything
                       -fno-warn-all-missed-specialisations
                       -fno-warn-missing-import-lists
                       -fno-warn-safe
                       -fno-warn-unsafe

  if (!flag(development))
    ghc-options:         -Werror

test-suite test
  hs-source-dirs:      test
  main-is:             test.hs
  type:                exitcode-stdio-1.0

  other-modules:
                       Test.Cardano.Crypto.CBOR
                       Test.Cardano.Crypto.Dummy
                       Test.Cardano.Crypto.Example
                       Test.Cardano.Crypto.Gen
                       Test.Cardano.Crypto.Hashing
                       Test.Cardano.Crypto.HD
                       Test.Cardano.Crypto.Json
                       Test.Cardano.Crypto.Keys
                       Test.Cardano.Crypto.Limits
                       Test.Cardano.Crypto.Random
                       Test.Cardano.Crypto.Signing.Proxy
                       Test.Cardano.Crypto.Signing.Redeem
                       Test.Cardano.Crypto.Signing.Safe
                       Test.Cardano.Crypto.Signing.Signing

  build-depends:       base
                     , bytestring
                     , cardano-binary
                     , cardano-binary-test
                     , cardano-crypto
                     , cardano-crypto-wrapper
                     , cardano-prelude
                     , cardano-prelude-test
                     , cryptonite
                     , formatting
                     , hedgehog
                     , memory
                     , text

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  ghc-options:         -Weverything
                       -fno-warn-all-missed-specialisations
                       -fno-warn-missing-import-lists
                       -fno-warn-safe
                       -fno-warn-unsafe

  if (!flag(development))
    ghc-options:         -Werror

  ghc-options:         -threaded
                       -rtsopts
