name:                cardano-prelude
version:             0.1.0.0
synopsis:            A Prelude replacement for the Cardano project
description:         A Prelude replacement for the Cardano project
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2018 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cardano.Prelude
  build-depends:       base >=4.11 && <4.12
                     , universum
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
