name:                cardano-ledger-test
version:             1.3.0
synopsis:            Test helpers from cardano-ledger exposed to other packages
description:         Test helpers from cardano-ledger exposed to other packages
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2018 IOHK
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  exposed-modules:
                       Test.Cardano.Chain.Block.Bi
                       Test.Cardano.Chain.Block.Gen
                       Test.Cardano.Chain.Common.Example
                       Test.Cardano.Chain.Common.Gen
                       Test.Cardano.Chain.Common.Lovelace
                       Test.Cardano.Chain.Delegation.Example
                       Test.Cardano.Chain.Delegation.Gen
                       Test.Cardano.Chain.Genesis.Dummy
                       Test.Cardano.Chain.Genesis.Example
                       Test.Cardano.Chain.Genesis.Gen
                       Test.Cardano.Chain.Genesis.Json
                       Test.Cardano.Chain.Slotting.Example
                       Test.Cardano.Chain.Slotting.Gen
                       Test.Cardano.Chain.Slotting.Properties
                       Test.Cardano.Chain.Txp.Bi
                       Test.Cardano.Chain.Txp.Example
                       Test.Cardano.Chain.Txp.Gen
                       Test.Cardano.Chain.Txp.Json
                       Test.Cardano.Chain.Update.Example
                       Test.Cardano.Chain.Update.Gen
                       Test.Cardano.Chain.Update.Properties

  build-depends:       base
                     , base16-bytestring
                     , binary
                     , bytestring
                     , canonical-json
                     , cardano-binary
                     , cardano-binary-test
                     , cardano-ledger
                     , cardano-crypto
                     , cardano-crypto-test
                     , cardano-crypto-wrapper
                     , cardano-prelude
                     , cardano-prelude-test
                     , containers
                     , cryptonite
                     , formatting
                     , hedgehog
                     , streaming
                     , text
                     , time
                     , vector

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  ghc-options:         -Weverything
                       -fno-warn-all-missed-specialisations
                       -fno-warn-missing-import-lists
                       -fno-warn-safe
                       -fno-warn-unsafe

  if (!flag(development))
    ghc-options:         -Werror
