name:                bulk-chain-validation
version:             0.1.0.0
description:         Bulk chain validation
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2019 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable bulk-chain-validation-exe
  main-is:             Main.hs
  other-modules:
                       Features.Blockchain
  hs-source-dirs:      app

  build-depends:       base >=4.11 && <5
                     , containers
                     , cardano-crypto-wrapper
                     , cardano-ledger
                     , cardano-mainnet-mirror
                     , cardano-prelude
                     , cardano-shell
                     , formatting
                     , iohk-monitoring

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  ghc-options:         -Weverything
                       -fno-warn-all-missed-specialisations
                       -fno-warn-missing-import-lists
                       -fno-warn-safe
                       -fno-warn-unsafe
