cabal-version: 3.0

name:                cardano-ledger-alonzo
version:             0.1.0.0
synopsis:            Cardano ledger introducing Plutus Core
description:
  This package builds upon the Mary ledger with support for extended UTxO
  via Plutus Core.
bug-reports:         https://github.com/input-output-hk/cardano-ledger-specs/issues
license:             Apache-2.0
author:              IOHK Formal Methods Team
maintainer:          formal.methods@iohk.io
copyright:           2020 Input Output (Hong Kong) Ltd.
category:            Network
build-type:          Simple


extra-source-files:
  cddl-files/alonzo.cddl
  cddl-files/mock/crypto.cddl
  cddl-files/mock/extras.cddl

common base                         { build-depends: base                             >= 4.12       && < 4.15     }

common project-config
  default-language:   Haskell2010

  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wpartial-fields
                      -Wredundant-constraints
                      -Wunused-packages

library
  import:             base, project-config

  exposed-modules:
    Cardano.Ledger.Alonzo
    Cardano.Ledger.Alonzo.Data
    Cardano.Ledger.Alonzo.PlutusScriptApi
    Cardano.Ledger.Alonzo.Language
    Cardano.Ledger.Alonzo.PParams
    Cardano.Ledger.Alonzo.Rules.Utxo
    Cardano.Ledger.Alonzo.Rules.Utxos
    Cardano.Ledger.Alonzo.Rules.Utxow
    Cardano.Ledger.Alonzo.Rules.Ledger
    Cardano.Ledger.Alonzo.Rules.Bbody
    Cardano.Ledger.Alonzo.Scripts
    Cardano.Ledger.Alonzo.Translation
    Cardano.Ledger.Alonzo.Tx
    Cardano.Ledger.Alonzo.TxBody
    Cardano.Ledger.Alonzo.TxInfo
    Cardano.Ledger.Alonzo.TxSeq
    Cardano.Ledger.Alonzo.TxWitness
    Cardano.Ledger.DescribeEras
  build-depends:
    bytestring,
    cardano-binary,
    cardano-crypto-class,
    cardano-ledger-core,
    cardano-ledger-shelley-ma,
    cardano-prelude,
    cardano-slotting,
    containers,
    data-default,
    deepseq,
    mtl,
    nothunks,
    plutus-ledger-api,
    plutus-tx,
    plutus-core,
    shelley-spec-ledger,
    small-steps,
    strict-containers,
    text,
    transformers
  hs-source-dirs:
    src

library test
  import:             base, project-config

  visibility: public
  exposed-modules:
    Test.Cardano.Ledger.Alonzo.Serialisation.Generators
  build-depends:
    cardano-ledger-alonzo,
    cardano-ledger-core,
    cardano-ledger-shelley-ma-test,
    containers,
    plutus-tx,
    QuickCheck,
    shelley-spec-ledger-test,
    shelley-spec-ledger,
    text,
  hs-source-dirs:
    test/lib

test-suite cardano-ledger-alonzo-test
  import:             base, project-config

  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:
    test/test
  other-modules:
    Test.Cardano.Ledger.Alonzo.Golden
    Test.Cardano.Ledger.Alonzo.Serialisation.Tripping
    Test.Cardano.Ledger.Alonzo.Examples.Utxow
    Test.Cardano.Ledger.Alonzo.Translation
    Test.Cardano.Ledger.Alonzo.Serialisation.CDDL
  build-depends:
    base16-bytestring,
    bytestring,
    cardano-binary,
    cardano-ledger-alonzo,
    cardano-ledger-shelley-ma,
    cardano-ledger-core,
    cardano-ledger-shelley-ma-test,
    containers,
    data-default-class,
    plutus-core,
    plutus-tx,
    plutus-ledger-api,
    QuickCheck,
    small-steps,
    small-steps-test,
    shelley-spec-ledger,
    shelley-spec-ledger-test,
    strict-containers,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    test
